Fix for background image on mobile

--- a/styles/clearhome.css
+++ b/styles/clearhome.css
@@ -2,6 +2,9 @@ body {
   font-size: 16px;
   color: white;
   background: url("../img/water.jpeg") no-repeat center center fixed;
+  -moz-background-size: cover;
+  -o-background-size: cover;
+  -webkit-background-size: cover;
   background-size: cover;
 }
 
